fixed text alignment

--- a/foundation/css/app.css
+++ b/foundation/css/app.css
@@ -20,6 +20,10 @@ h6 {
     width: 100%;
 }
 
+.topbar-button{
+	font-size: 0.8rem;
+	text-align: center;
+}
 
 .portfolio_item{
 	height: 20rem;
